engine/tests/fixtures/invalid/ui-web/proj-web-surface-invalid.tg
projection proj_web_surface_invalid {
  name "Invalid Web UI"
  description "Web projection with invalid route and generator defaults"

  type web_surface
  realizes [proj_ui_contract_stub]
  outputs [web_app]

  screen_routes {
    screen stub_home path home
    screen ghost_screen path /same
    screen stub_home path /same
  }

  web_hints {
    screen ghost_screen layout cards
    action cap_missing confirm popup
  }

  generator_defaults {
    profile angular
    language elm
    styling sass
  }

  status active
}
